--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -10,10 +10,9 @@
                 <page string="Shopify">
                     <group>
                         <group string="Mapping">
-                            <field name="shopify_product_map_ids">
+                            <field name="product_map_ids">
                                 <tree editable="bottom">
                                     <field name="web_product_id"/>
-                                    <!-- Se muestra la referencia al producto para deducir el color -->
                                     <field name="odoo_id" string="Color" options="{'no_create': True}"/>
                                     <field name="shopify_instance_id"/>
                                 </tree>
@@ -29,7 +28,6 @@
                     </group>
                 </page>
             </xpath>
-
         </field>
     </record>
 
@@ -40,7 +38,7 @@
         <field name="arch" type="xml">
             <search>
                 <filter string="Shopify Products" name="shopify_products"
-                        domain="[('shopify_product_map_ids','!=',False)]"/>
+                        domain="[('product_map_ids','!=',False)]"/>
             </search>
         </field>
     </record>
@@ -67,7 +65,6 @@
                             <field name="shopify_variant_map_ids">
                                 <tree editable="bottom">
                                     <field name="web_variant_id"/>
-                                    <!-- Se muestra la relación al producto para deducir el color -->
                                     <field name="odoo_id" string="Color" options="{'no_create': True}"/>
                                     <field name="shopify_instance_id"/>
                                 </tree>
@@ -83,7 +80,6 @@
                     </group>
                 </page>
             </xpath>
-
         </field>
     </record>
 
