--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -1,106 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Product Template Form View Inherited -->
-    <record model="ir.ui.view" id="product_template_shopify_form">
-        <field name="name">product.template.form.view.inherit.shopify</field>
-        <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_only_form_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//page[@name='general_information']" position="after">
-                <page string="Shopify">
-                    <group>
-                        <group string="Mapping">
-                            <field name="product_map_ids">
-                                <tree editable="bottom">
-                                    <field name="web_product_id"/>
-                                    <field name="odoo_id" string="Color" options="{'no_create': True}"/>
-                                    <field name="shopify_instance_id"/>
-                                </tree>
-                                <form string="Shopify Product Map">
-                                    <group>
-                                        <field name="web_product_id"/>
-                                        <field name="odoo_id" string="Color" options="{'no_create': True}"/>
-                                        <field name="shopify_instance_id"/>
-                                    </group>
-                                </form>
-                            </field>
-                        </group>
-                    </group>
-                </page>
-            </xpath>
-        </field>
-    </record>
-
-    <record id="view_product_template_search_inherit_shopify" model="ir.ui.view">
-        <field name="name">view.product.template.search.inherit.shopify</field>
-        <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_search_view"/>
-        <field name="arch" type="xml">
-            <search>
-                <filter string="Shopify Products" name="shopify_products"
-                        domain="[('product_map_ids','!=',False)]"/>
-            </search>
-        </field>
-    </record>
-
-    <record id="action_product_template_shopify" model="ir.actions.act_window">
-        <field name="name">Products</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">product.template</field>
-        <field name="view_id" ref="product.product_template_tree_view"/>
-        <field name="context">{'search_default_shopify_products': 1}</field>
-        <field name="view_mode">tree,form</field>
-    </record>
-
-    <!-- Product Variant Form View Inherited -->
-    <record model="ir.ui.view" id="product_variant_shopify_form">
-        <field name="name">product.product.form.view.inherit.shopify</field>
-        <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_normal_form_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//page[@name='general_information']" position="after">
-                <page string="Shopify">
-                    <group>
-                        <group string="Mapping">
-                            <field name="shopify_variant_map_ids">
-                                <tree editable="bottom">
-                                    <field name="web_variant_id"/>
-                                    <field name="odoo_id" string="Color" options="{'no_create': True}"/>
-                                    <field name="shopify_instance_id"/>
-                                </tree>
-                                <form string="Shopify Variant Map">
-                                    <group>
-                                        <field name="web_variant_id"/>
-                                        <field name="odoo_id" string="Color" options="{'no_create': True}"/>
-                                        <field name="shopify_instance_id"/>
-                                    </group>
-                                </form>
-                            </field>
-                        </group>
-                    </group>
-                </page>
-            </xpath>
-        </field>
-    </record>
-
-    <record id="view_product_product_search_inherit_shopify" model="ir.ui.view">
-        <field name="name">view.product.product.search.inherit.shopify</field>
-        <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_search_form_view"/>
-        <field name="arch" type="xml">
-            <search>
-                <filter string="Shopify Products" name="shopify_products"
-                        domain="[('shopify_variant_map_ids','!=',False)]"/>
-            </search>
-        </field>
-    </record>
-
-    <record id="action_product_product_shopify" model="ir.actions.act_window">
-        <field name="name">Product Variants</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">product.product</field>
-        <field name="view_id" ref="product.product_product_tree_view"/>
-        <field name="view_mode">tree,form</field>
-    </record>
+    <!-- Product Template Form View Inherited: Muestra los mapeos de color -->
 
 </odoo>
