--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -33,5 +33,14 @@
             </xpath>
         </field>
     </record>
+	
+	<record id="action_product_template_shopify" model="ir.actions.act_window">
+        <field name="name">Products</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">product.template</field>
+        <field name="view_id" ref="product.product_template_tree_view"/>
+        <field name="context">{'search_default_shopify_products': 1}</field>
+        <field name="view_mode">tree,form</field>
+    </record>
 </odoo>
 
