--- a/views/shopify_instance_view.xml
+++ b/views/shopify_instance_view.xml
@@ -40,6 +40,15 @@
                                     </group>
                                 </group>
                             </page>
+							<page string="Export Details">
+								<group>
+									<field name="last_export_product"/>
+									<field name="last_export_stock"/>
+									<field name="split_products_by_color"/>
+									<field name="size_option_position"/>
+									<field name="color_option_position"/>
+								</group>
+							</page>							
                         </notebook>
                     </sheet>
                 </form>
