--- a/views/shopify_instance_view.xml
+++ b/views/shopify_instance_view.xml
@@ -44,6 +44,7 @@
 								<group>
 									<field name="last_export_product"/>
 									<field name="last_export_stock"/>
+									<field name="last_export_stock_id"/>
 									<field name="split_products_by_color"/>
 									<field name="size_option_position"/>
 									<field name="color_option_position"/>
